[package]
name        = "valence-native-splitter"
authors     = ["benskey bekauz@protonmail.com"]
description = "Native Splitter module for covenants"
edition     = { workspace = true }
license     = { workspace = true }
# rust-version = { workspace = true }
version = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
covenant-macros = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
covenant-utils  = { workspace = true }
valence-clock  = { workspace = true, features = ["library"] }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
thiserror       = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
semver          = { workspace = true }
