[package]
name        = "valence-outpost-osmo-liquid-pooler"
authors     = ["benskey bekauz@protonmail.com"]
description = "Osmosis outpost for liquid pooler contract for covenants"
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }
edition     = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { version = "1.5.4", features = [
  "cosmwasm_1_1",
  "cosmwasm_1_2",
] }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
osmosis-std = "0.13.2"
prost = { workspace = true }
