[package]
name        = "covenant-two-party-pol"
edition     = { workspace = true }
authors     = ["benskey bekauz@protonmail.com"]
description = "Two Party POL covenant"
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]


[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema                  = { workspace = true }
cosmwasm-std                     = { workspace = true }
cw-storage-plus                  = { workspace = true }
cw-utils                         = { workspace = true }
cw2                              = { workspace = true }
serde                            = { workspace = true }
thiserror                        = { workspace = true }
sha2                             = { workspace = true }
neutron-sdk                      = { workspace = true }
cosmos-sdk-proto                 = { workspace = true }
protobuf                         = { workspace = true }
schemars                         = { workspace = true }
serde-json-wasm                  = { workspace = true }
base64                           = { workspace = true }
prost                            = { workspace = true }
prost-types                      = { workspace = true }
bech32                           = { workspace = true }
covenant-clock                   = { workspace = true, features = ["library"] }
covenant-utils                   = { workspace = true }
covenant-ibc-forwarder           = { workspace = true, features = ["library"] }
covenant-interchain-router       = { workspace = true, features = ["library"] }
covenant-native-router           = { workspace = true, features = ["library"] }
covenant-two-party-pol-holder    = { workspace = true, features = ["library"] }
covenant-astroport-liquid-pooler = { workspace = true, features = ["library"] }
covenant-osmo-liquid-pooler      = { workspace = true, features = ["library"] }
astroport                        = { workspace = true }
