[package]
name = "covenant-holder"
authors = ["udit <udit.vira@gmail.com>"]
description = "A holder can hold funds in a covenant"
edition = { workspace = true }
license = { workspace = true }
# rust-version = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# disables #[entry_point] (i.e. instantiate/execute/query) export
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw20             = { version = "0.15" }
astroport        = "2.8.0"

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-whitelist = {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-factory =  {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-native-coin-registry = {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-pair-stable = {git = "https://github.com/astroport-fi/astroport-core.git"}
